# SPICEBench

./: .gitignore  LICENSE  README.md  env-template.txt  pyproject.toml
swebench_qa/: app.py  base_labellers.py  core.py  environment.py  experiment_utils.py  postprocess.py  vcs.py
swebench_qa/aider/: aider.py  aider_utils.py
swebench_qa/difficulty_labeller/: difficulty_labeller.py
swebench_qa/issue_labeller/: issue_labeller.py  labeller_utils.py  model_parameters.json  model_provider.py
swebench_qa/prompts/: prompt.py
swebench_qa/prompts/difficulty_labeller/: extract_score.md  general_context.md  task_template.md
swebench_qa/prompts/issue_labeller/naive/: naive_prompt.txt
swebench_qa/prompts/test_labeller/: examples.md  examples_claude3_7.md  extract_score.md  general_context.md  task_context.md  task_template.md  warning.md
swebench_qa/test_labeller/: test_labeller.py
